<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/full_name"
                android:textSize="20dp" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:paddingTop="15dp"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:paddingTop="15dp"
                    android:textSize="20dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/phone_number"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone_number"
                android:paddingTop="15dp"
                android:textSize="20dp"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/group_size"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/groupSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/size"
                android:paddingTop="15dp"
                android:textSize="20dp"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/smokeAreaCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking_area"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/date"
                android:textSize="20dp"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20dp"
                android:paddingTop="10dp"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">
                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    android:textSize="16dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:textSize="16dp"
                    android:textAllCaps="false"/>
            </LinearLayout>

         </LinearLayout>

    </ScrollView>

</LinearLayout>